objects/agf__ADM_Goal__c.object
<CustomObject>
    <fields>
        <fullName>agf__Current_Measurements__c</fullName>
        <inlineHelpText>What is the current status of this goal of achived vs. what we want to achieve?</inlineHelpText>
        <label>Current Measurements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Description_255__c</fullName>
        <inlineHelpText>Short description of this goal</inlineHelpText>
        <label>Description (255)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__How_will_it_be_measured__c</fullName>
        <label>How will it be measured?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Program Goals</relationshipLabel>
        <relationshipName>Program_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>agf__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Theme</label>
        <referenceTo>agf__ADM_Theme__c</referenceTo>
        <relationshipLabel>Program Goals</relationshipLabel>
        <relationshipName>Program_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program Goal</label>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>